--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>English Master - Curso Online de Inglês</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="./src/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="/imagens/pexels-ivan-samkov-5676740.jpg" 
+                    <img src="./imagens/pexels-ivan-samkov-5676740.jpg" 
                          alt="Estudante aprendendo inglês" class="img-fluid rounded-3 shadow-lg">
                 </div>
             </div>
@@ -88,12 +88,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <img src="/imagens/dinheiro.jpg" 
+                    <img src="./imagens/dinheiro.jpg" 
                          alt="Professor de inglês" class="img-fluid rounded-3 shadow">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="display-5 fw-bold text-primary mb-4">
-                        Por que escolher nosso curso?
+                       Por que escolher a gente?
                     </h2>
                     <p class="lead mb-4">
                         Desenvolvemos uma metodologia única que combina teoria e prática, 
@@ -165,7 +165,7 @@
                             <div class="col-lg-8">
                                 <div class="card border-0 shadow-sm">
                                     <div class="card-body p-5 text-center">
-                                        <img src="/imagens/mulher_.jpg" 
+                                        <img src="./imagens/mulher_.jpg" 
                                              alt="Maria Silva" class="rounded-circle mb-4" width="80" height="80">
                                         <blockquote class="blockquote mb-4">
                                             <p class="fs-5">"Em 6 meses consegui a promoção que tanto queria! 
@@ -191,14 +191,14 @@
                             <div class="col-lg-8">
                                 <div class="card border-0 shadow-sm">
                                     <div class="card-body p-5 text-center">
-                                        <img src="/placeholder.svg?height=80&width=80" 
+                                        <img src="./imagens/homem.jpeg" 
                                              alt="João Santos" class="rounded-circle mb-4" width="80" height="80">
                                         <blockquote class="blockquote mb-4">
                                             <p class="fs-5">"Finalmente consegui realizar meu sonho de estudar no exterior. 
                                             O curso me preparou perfeitamente para o TOEFL!"</p>
                                         </blockquote>
                                         <footer class="blockquote-footer">
-                                            <strong>João Santos</strong> - Estudante de Engenharia
+                                            <strong>André Isaque</strong> - Estudante de Engenharia
                                         </footer>
                                         <div class="mt-3">
                                             <i class="bi bi-star-fill text-warning"></i>
@@ -217,7 +217,7 @@
                             <div class="col-lg-8">
                                 <div class="card border-0 shadow-sm">
                                     <div class="card-body p-5 text-center">
-                                        <img src="/imagens/pessoa-de-origem-indiana-se-divertindo.jpg" 
+                                        <img src="./imagens/pessoa-de-origem-indiana-se-divertindo.jpg" 
                                              alt="Ana Costa" class="rounded-circle mb-4" width="80" height="80">
                                         <blockquote class="blockquote mb-4">
                                             <p class="fs-5">"A metodologia é incrível! Aprendi mais em 3 meses 
@@ -487,6 +487,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
